--- a/paginas/404.html
+++ b/paginas/404.html
@@ -31,15 +31,20 @@
     	
     	<div class="account-pages"></div>
 		<div class="clearfix"></div>
-		
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
         <div class="wrapper-page">
             <div class="ex-page-content text-center">
                 <div class="text-error"><span class="text-primary">4</span><i class="ti-face-sad text-pink"></i><span class="text-info">4</span></div>
                 <h2>Ops! Página não encontrada.</h2><br>
-                <p class="text-muted">Por favor, tente novamente. Caso o problema persista entre em contato com o administrador</p>
-                <br>
-                <a class="btn btn-default waves-effect waves-light" href="/inicio">Retornar</a>
-                
+                <p class="text-muted">Por favor, tente novamente</p>
+                <a class="btn btn-default waves-effect waves-light" href="/inicio">Retornar</a>         
             </div>
         </div>
 
